--- a/bidder-my-bids.html
+++ b/bidder-my-bids.html
@@ -69,11 +69,11 @@
       <div class="row row-2 mb-4 pb-3">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img1.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img1.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-blue">Watched</span>
               </div>
@@ -113,11 +113,11 @@
       <div class="row row-2 mb-4 pb-3">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img13.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img13.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-green">You are holding the highest bid</span>
               </div>
@@ -157,11 +157,11 @@
       <div class="row row-2 mb-4 pb-3">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img12.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img12.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-red">Outbid</span>
               </div>
@@ -201,11 +201,11 @@
       <div class="row row-2 mb-4 pb-3">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img14.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img14.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-green">Start bidding</span>
               </div>
@@ -245,11 +245,11 @@
       <div class="row row-2 mb-4 pb-3">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img11.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img11.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-green">Won!!!</span>
               </div>
@@ -288,11 +288,11 @@
       <div class="row row-2 mb-4 pb-3 closed">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img15.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img15.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-closed">Closed</span>
               </div>
@@ -332,11 +332,11 @@
       <div class="row row-2 mb-4 pb-3 closed">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img11.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img11.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-closed">Closed</span>
               </div>
@@ -376,11 +376,11 @@
       <div class="row row-2 mb-4 pb-3 closed">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img16.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img16.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-closed">Closed</span>
               </div>
@@ -420,11 +420,11 @@
       <div class="row row-2 mb-4 pb-3 closed">
         <div class="col-lg-7 mb-3 mb-lg-0">
           <div class="row row-2">
-            <div class="col-md-5 mb-3 mb-md-0">
-              <div class="bg-img bg-img-radius embed-responsive embed-responsive-16by9" style="background-image: url(img/img17.png)">
+            <div class="col-md-auto mb-3 mb-md-0">
+              <div class="bg-img block-img embed-responsive embed-responsive-16by9" style="background-image: url(img/img17.png)">
               </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
               <div class="pb-1">
                 <span class="pill pill-closed">Closed</span>
               </div>
