--- a/auctioneer-auction-details-upcoming-sms-sent.html
+++ b/auctioneer-auction-details-upcoming-sms-sent.html
@@ -41,18 +41,16 @@
       <div class="collapse navbar-collapse text-center text-xl-left" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto align-items-xl-center my-3 my-xl-0">
           <li class="nav-item">
-            <a class="nav-link" href="#!">Auctions</a>
+            <a class="nav-link" href="#!">All Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">My Bids</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!">Transactions</a>
+            <a class="nav-link active" href="#!">My Auctions</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#!">Account</a>
           </li>
         </ul>
+        <a href="#!" class="btn btn-success btn-sign mb-3 mb-xl-0">New Auction</a>
       </div>
     </div>
   </nav>
@@ -60,54 +58,14 @@
   <section class="section pt-5 mb-3 bg-white">
     <div class="container">
       <div class="row row-3 justify-content-center">
-        <div class="col-xl-7 mb-5 mb-xl-0">
+        <div class="col-lg-9 col-xl-7 mb-5 mb-xl-0">
           <a href="#!" class="see-all see-all-back">
             <img src="img/arrow-left.svg" alt="" class="align-middle">
             <span class="d-inline-block pl-1 align-middle">Back to screen semantic name</span>
           </a>
-          <div class="fz-32 font-weight-bold lh-12 mt-1">Auction for residential plot No. 13, Block 1 / A, Plan 26/816, Al-Aziziyah neighborhood</div>
-          <div class="row row-1 py-3">
-            <div class="col-md-6 mb-3 mb-md-0">
-              <div class="row row-1">
-                <div class="col-auto">
-                  <a href="#!" class="btn btn-outline-light btn-watch">
-                    <span class="img-watch align-middle"></span>
-                    <span class="ml-2 align-middle">Watch</span>
-                  </a>
-                </div>
-                <div class="col-auto">
-                  <a href="#!" class="btn btn-outline-light btn-watch">
-                    <img src="img/whatsapp.svg" alt="">
-                    <span class="ml-2">Contact the auctioneer</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="row row-1 justify-content-md-end">
-                <div class="col-auto">
-                  <a href="#!" class="btn btn-outline-light btn-watch">
-                    <img src="img/facebook.svg" alt="">
-                    <span class="ml-2">Share</span>
-                  </a>
-                </div>
-                <div class="col-auto">
-                  <a href="#!" class="btn btn-outline-light btn-watch">
-                    <img src="img/twitter.svg" alt="">
-                    <span class="ml-2">Share</span>
-                  </a>
-                </div>
-                <div class="col-auto">
-                  <a href="#!" class="btn btn-outline-light btn-watch">
-                    <img src="img/whatsapp.svg" alt="">
-                    <span class="ml-2">Share</span>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="fz-32 font-weight-bold lh-12 mt-1 pb-4">Auction for residential plot No. 13, Block 1 / A, Plan 26/816, Al-Aziziyah neighborhood</div>
 
-          <div class="bg-img bg-img-460 bg-img-radius" style="background-image: url(img/img28.png)">
+          <div class="bg-img bg-img-460 bg-img-radius mt-2" style="background-image: url(img/img50.png)">
           </div>
           <div class="radius-bottom-8 mb-4">
             <div class="row row-4 pt-1">
@@ -186,7 +144,7 @@
           </div>
           <div class="fz-32 font-weight-bold lh-12 mt-4 mb-3">This auction has special terms</div>
           <div>This auction has special terms stated by the Auctioneer. These terms have not been manually verified by Asaas. These terms are applicable on top of Asaas’s terms and conditions.</div>
-          <div class="block-gray mt-3">All bids will be made public once the bidding process. For additional information, please visit https://auctionco.sa.</div>
+          <div class="block-website mt-3">All bids will be made public once the bidding process. For additional information, please visit https://auctionco.sa.</div>
           <hr class="my-40">
           <div class="row row-1">
             <div class="col-sm-auto">
@@ -202,53 +160,46 @@
         </div>
         <div class="col-lg-6 col-xl-5">
           <div class="bid-block">
-            <span class="pill pill-green mb-3">You are holding the highest bid</span>
-            <div class="row row-1 align-items-center">
+            <div class="row row-1 align-items-end mb-4">
               <div class="col-sm">
-                <div class="fz-32 font-weight-bold lh-12 text-black">SAR 2 300 000</div>
+                <div class="fz-32 font-weight-bold lh-12 text-black text-uppercase">UPCOMING</div>
               </div>
-              <div class="col-sm-auto">SAR 1500 per sqm</div>
-            </div>
-            <div class="mt-3">
-              <div class="row pb-1">
-                <div class="col">Currently selected bid</div>
-                <div class="col-auto">1 350 000</div>
-              </div>
-              <div class="row pb-1">
-                <div class="col">Property tax (first property)</div>
-                <div class="col-auto">19 500</div>
-              </div>
-              <div class="row pb-1">
-                <div class="col">Lister commission tax</div>
-                <div class="col-auto">3 500</div>
-              </div>
-              <div class="row pb-1">
-                <div class="col">Platform commission tax</div>
-                <div class="col-auto">1 500</div>
-              </div>
-              <div class="row pb-1">
-                <div class="col">Lister commission</div>
-                <div class="col-auto">70 500</div>
-              </div>
-              <div class="row pb-1">
-                <div class="col">Platform commmission</div>
-                <div class="col-auto">13 500</div>
-              </div>
-            </div>
-            <hr class="my-1">
-            <div class="row text-black">
-              <div class="col">Total price, incl. taxes and commissions</div>
-              <div class="col-auto">1 431 009</div>
-            </div>
-            <div class="row align-items-center mt-2 pt-1 bid-time">
-              <div class="col-sm">
-                <span class="d-inline-block">
-                  <span class="bid-clock bid-clock-green"></span>
-                  <span class="bid-text-green font-weight-bold align-middle  d-inline-block">2d : 3h : 15m</span> 
-                  <span class="align-middle d-inline-block">left</span>
+              <div class="col-sm-auto">
+                <span class="d-inline-block bid-time">
+                  <span class="bid-clock bid-clock-blue"></span>
+                  <span class="bid-text-blue font-weight-bold align-middle  d-inline-block">2d : 3h : 15m</span> 
+                  <span class="align-middle d-inline-block"> to start</span>
                 </span>
               </div>
-              <div class="col-sm-auto"><span>Last bid: <span class="bid-text-green font-weight-bold">2 hours ago</span></span></div>
+            </div>
+            <p class="text-gray mb-2">Your auction has been published and it is available as an upcoming auction.</p>
+            <div class="text-black">
+              <div class="row pb-1">
+                <div class="col">Start date and time</div>
+                <div class="col-auto text-blue font-weight-bold">12:30, 27/03/2021</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Starting price</div>
+                <div class="col-auto text-blue font-weight-bold">1 200 000</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Minimum bid step</div>
+                <div class="col-auto text-blue font-weight-bold">SAR 12 000</div>
+              </div>
+              <div class="row pb-1">
+                <div class="col">Auctioneer fee</div>
+                <div class="col-auto text-blue font-weight-bold">2%, SAR 24 000</div>
+              </div>
+            </div>
+          </div>
+          <div class="fz-32 font-weight-bold lh-12 text-black mt-4 py-3">Sent SMS to 49 bidders</div>
+          <p class="text-gray">You have successfully messaged 49 bidder phone numbers. Click to see the details. You can contact our team for expanding your quota or any issues related to SMS delivery.</p>
+          <div class="row row-1 justify-content-center justify-content-sm-start align-items-center mt-4">
+            <div class="col-sm-auto">
+              <button class="btn btn-primary btn-sign btn-edit btn-block d-sm-inline-block ml-0" data-toggle="modal" data-target="#modal">SMS campaign details</button>
+            </div>
+            <div class="col-sm-auto text-center mt-3 mt-sm-0">
+              <a href="#!" class="see-all see-all-2">Request additional messages</a>
             </div>
           </div>
         </div>
@@ -347,6 +298,48 @@
       </div>
     </div>
   </footer>
+
+  <div class="modal fade" id="modal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-deposit">
+      <div class="modal-content">
+        <div class="card card-signup">
+          <div class="fz-32 font-weight-bold mb-4 mt-2 mt-sm-0">SMS campaign details</div>
+          <div class="text-gray">
+            <p>You can preview your campaign for this auction here.</p>
+          </div>
+          <form id="form" class="pt-3" novalidate="novalidate">
+            <div class="form-group">
+              <div class="d-flex flex-column-reverse">
+                <textarea type="text" class="form-control form-textarea form-textarea-125" placeholder="" name="description3" maxlength="100"></textarea>
+                <div class="row row-1 mb-2 align-items-center">
+                  <div class="col">Message sent</div>
+                </div>
+              </div>
+            </div>
+            <div class="form-group py-3">
+              <div class="d-flex flex-column-reverse">
+                <textarea type="text" class="form-control form-textarea form-textarea-100" placeholder="" name="description2" id="count-50" maxlength="50"></textarea>
+                <div class="row row-1 mb-2 align-items-center">
+                  <div class="col">Mobile numbers messaged</div>
+                  <div class="col-auto fz-14">
+                    <div id="the-count-50" class="the-count">
+                      <span id="current-50">0</span>
+                      <span id="maximum-50">/50</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row align-items-center justify-content-lg-between mt-4">
+              <div class="col-lg-auto">
+                <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 btn-block d-sm-inline-block px-2 px-sm-3 py-2" data-dismiss="modal">Close campaign details</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
