--- a/bidder-auction-details-closed-won.html
+++ b/bidder-auction-details-closed-won.html
@@ -60,7 +60,7 @@
   <section class="section pt-5 mb-3 bg-white">
     <div class="container">
       <div class="row row-3 justify-content-center">
-        <div class="col-xl-7 mb-5 mb-xl-0">
+        <div class="col-lg-9 col-xl-7 mb-5 mb-xl-0">
           <a href="#!" class="see-all see-all-back">
             <img src="img/arrow-left.svg" alt="" class="align-middle">
             <span class="d-inline-block pl-1 align-middle">Back to screen semantic name</span>
@@ -186,7 +186,7 @@
           </div>
           <div class="fz-32 font-weight-bold lh-12 mt-4 mb-3">This auction has special terms</div>
           <div>This auction has special terms stated by the Auctioneer. These terms have not been manually verified by Asaas. These terms are applicable on top of Asaas’s terms and conditions.</div>
-          <div class="block-gray mt-3">All bids will be made public once the bidding process. For additional information, please visit https://auctionco.sa.</div>
+          <div class="block-website mt-3">All bids will be made public once the bidding process. For additional information, please visit https://auctionco.sa.</div>
           <hr class="my-40">
           <div class="row row-1">
             <div class="col-sm-auto">
