--- a/bidder-auction-details-your-bid.html
+++ b/bidder-auction-details-your-bid.html
@@ -107,7 +107,7 @@
             </div>
           </div>
 
-          <div class="bg-img bg-img-460 bg-img-radius" style="background-image: url(img/img26.png)">
+          <div class="bg-img bg-img-460 bg-img-radius" style="background-image: url(img/img28.png)">
           </div>
           <div class="radius-bottom-8 mb-4">
             <div class="row row-4 pt-1">
@@ -202,7 +202,7 @@
         </div>
         <div class="col-lg-6 col-xl-5">
           <div class="bid-block">
-            <span class="pill pill-red mb-3">You have been outbid!</span>
+            <span class="pill pill-green mb-3">You are holding the highest bid</span>
             <div class="row row-1 align-items-center">
               <div class="col-sm">
                 <div class="fz-32 font-weight-bold lh-12 text-black">SAR 2 300 000</div>
@@ -243,28 +243,12 @@
             <div class="row align-items-center mt-2 pt-1 bid-time">
               <div class="col-sm">
                 <span class="d-inline-block">
-                  <span class="bid-clock bid-clock-blue"></span>
-                  <span class="bid-text-blue font-weight-bold align-middle  d-inline-block">2d : 3h : 15m</span> 
+                  <span class="bid-clock bid-clock-green"></span>
+                  <span class="bid-text-green font-weight-bold align-middle  d-inline-block">2d : 3h : 15m</span> 
                   <span class="align-middle d-inline-block">left</span>
                 </span>
               </div>
-              <div class="col-sm-auto"><span>Last bid: <span class="bid-text-blue font-weight-bold">2 hours ago</span></span></div>
-            </div>
-            <button class="btn btn-success btn-sign ml-0 mt-3 fz-18 py-2 btn-block">Bid SAR 2 310 000</button>
-            <div class="row row-4 justify-content-center align-items-center text-center pt-1">
-              <div class="col-auto">
-                <div class="adjust-block">
-                  <a href="#!" class="adjust-bid adjust-bid-minus-gray align-middle d-inline-block"></a>
-                </div>
-              </div>
-              <div class="col-auto">
-                <span class="text-black align-middle d-inline-block">Adjust your bid</span>
-              </div>
-              <div class="col-auto">
-                <div class="adjust-block">
-                  <a href="#!" class="adjust-bid adjust-bid-plus-blue align-middle d-inline-block"></a>
-                </div>
-              </div>
+              <div class="col-sm-auto"><span>Last bid: <span class="bid-text-green font-weight-bold">2 hours ago</span></span></div>
             </div>
           </div>
         </div>
